<resources>
    <string name="app_name" translatable="false">MPAndroidChart</string>
    <string name="btn_pieChart"> PieChart</string>
    <string name="btn_lineChart">LineChart</string>
    <string name="tvLineChart_title">LINE CHART</string>
    <string name="btn_barChart">BarChart</string>
    <string name="btn_radarChart">RadarChart</string>
    <string name="invalid_pieChart_input_toast"> Invalid format</string>
    <string name="tst_no_label">No label inserted</string>
    <string name="tst_no_value">No value inserted</string>
    <string name="r_btn_values">Values</string>
    <string name="r_btn_percent">Percent values</string>
    <string name="btn_changeCenterText">Change Center Text</string>
    <string name="tv_create_pieChart">Enter new data and create your PieChart</string>
    <string name="btn_new_data">New data</string>
    <string name="btn_add_data">Add Data</string>
    <string name="btn_create_chart">Create Chart</string>
    <string name="et_label_hint">Label</string>
    <string name="et_hour_hint">Hour</string>
    <string name="et_temperature_hint">Temperature</string>
    <string name="et_value_hint">Value</string>
    <string name="et_label_data_hint">Label Data</string>
    <string name="btn_add_label">Add label</string>
    <string name="et_axis_label">Axis label</string>
    <string name="et_data_set_hint">Add dataset name</string>
    <string name="toast_insert_an_hour_greater_than_previous_one">Insert an hour greater than the previous one!</string>
    <string name="toast_insert_hour_between_0_23">No valid hour! Insert an hour between 0 -:- 23!</string>
    <string name="toast_insert_an_hour">Insert an Hour!</string>
    <string name="toast_insert_a_temperature">Insert a Temperature!</string>
    <string name="toast_insert_hour_and_temperature">Insert an Hour and a Temperature!</string>
    <string name="text_tvLineHourData">"Hour: "</string>
    <string name="text_tvLineTemperatureData">"Temperature: "</string>
    <string name="text_LineChart_Temperature_label_legend">Temperature trend</string>
    <string name="text_LineChart_Chart_Title">Temperature LineChart</string>
    <string name="contentDescription_text_logo_ivTitle">Logo of MPAndroidChart</string>
    <string name="contentDescription_text_ivDeleteLineChartData">Icon to delete</string>
    <string name="text_tvEndgame" translatable="false">ENDGAME()</string>
    <string name="text_about_us_title">About Us</string>
    <string name="text_tvMemberOne">Member 1</string>
    <string name="text_tvGabrieleAnselmi" translatable="false">Gabriele Anselmi</string>
    <string name="text_ivGabrieleAnselmi_contentDescription">Gabriele Anselmi profile</string>
    <string name="text_tvMemberTwo">Member 2</string>
    <string name="text_ivFabioBarchiesi_contentDescription">Fabio Barchiesi profile</string>
    <string name="text_tvFabioBarchiesi" translatable="false">Fabio Barchiesi</string>
    <string name="text_tvMemberThree">Member 3</string>
    <string name="text_ivRiccardoConti_contentDescription">Riccardo Conti profile</string>
    <string name="text_tvRiccardoConti" translatable="false">Riccardo Conti</string>
    <string name="text_tvGroupSHead">Group\'s Head</string>
    <string name="text_ivFlaviaMagnoni_contentDescription">Flavia Magnoni profile</string>
    <string name="text_tvFlaviaMagnoni" translatable="false">Flavia Magnoni</string>
    <string name="text_tvContacts">Contacts</string>
    <string name="text_tvEmailLabel">Group\'s Head E-mail:</string>
    <string name="text_email_tvEmailAddress" translatable="false">flavia.magnoni@students.uniroma2.eu</string>
    <string name="text_ibtnGithub_contentDescription">ImageButton to go to Github project</string>
    <string name="text_tvPresentation">We are EndGame()! We realized \"MPAndroidChart Demo\" App! Members… assemble!</string>
    <string name="text_mnuAppInfo">App Info</string>
    <string name="text_mnuGithub">View MPAndroidChart on Github</string>
    <string name="text_tvPopupMain">"The app shows some examples of charts created using MPAndroidChart library."</string>
    <string name="text_tvPopupMain_insert_data_lineChart">"Here you can insert your data to realize your LineChart. Insert an hour of the day with relative temperature, and then click "Add Data" button! This is only a simple demo, so it's permitted to insert only an hour greater than the previous one!"</string>
    <string name="text_tvPopupLineChartInfo">"This is the Line Chart realized with you data. The chart shows the temperature trend of a day!"</string>
    <string name="text_tvPopup_insert_label_radarChart">Here you can enter the axis labels. A value must then be entered for each label</string>
    <string name="text_tvPopoup_insert_data_radarChart">Here has to be inserted a label for a data set and all the values for the labels.</string>
    <string name="text_tvPopoup_radarChart">This is the Radar Chart created with your data!</string>
</resources>

