<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_chart"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/margin_Logo_top_large"
        android:background="#E5DDF3"
        android:contentDescription="@string/contentDescription_text_logo_ivTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mpandroid" />

    <Button
        android:id="@+id/btnPieChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_right_xLarge"
        android:layout_marginTop="@dimen/margin_toTop_xLarge"
        android:background="@drawable/capsule_btn_pie_chart"
        android:text="@string/btn_pieChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRadarChart" />

    <Button
        android:id="@+id/btnRadarChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_toTop_xLarge"
        android:layout_marginEnd="@dimen/margin_left_right_xLarge"
        android:background="@drawable/capsule_btn_radar_chart"
        android:text="@string/btn_radarChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBarChart" />

    <Button
        android:id="@+id/btnLineChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_toTopOfTitle_large"
        android:layout_marginEnd="@dimen/margin_left_right_xLarge"
        android:background="@drawable/capsule_btn_linear_chart"
        android:text="@string/btn_lineChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTitle" />

    <Button
        android:id="@+id/btnBarChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_right_xLarge"
        android:layout_marginTop="@dimen/margin_toTop_xLarge"
        android:background="@drawable/capsule_btn_bar_chart"
        android:text="@string/btn_barChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLineChart" />

</androidx.constraintlayout.widget.ConstraintLayout>