<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RadarChartInsertLabelActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInsertRadarChart"
        android:layout_width="0dp"
        android:layout_height="@dimen/dim_rv"
        android:scrollbars="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etRadarChartLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRadarChartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/et_axis_label"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/btnRadarChartAddData"
        app:layout_constraintEnd_toStartOf="@+id/btnRadarChartAddLabel"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvInsertRadarChart" />

    <Button
        android:id="@+id/btnRadarChartAddLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_add_label"
        android:background="@drawable/capsule_btn_radar_chart"
        app:layout_constraintBottom_toTopOf="@+id/btnRadarChartAddData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvInsertRadarChart" />

    <Button
        android:id="@+id/btnRadarChartAddData"
        android:background="@drawable/capsule_btn_radar_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_add_data"
        android:textSize="@dimen/txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRadarChartLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>